--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,73 @@
-body {
+body,
+html {
+  height: 100%;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: lightyellow;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.image-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  max-width: 800px;
+  max-height: 600px;
+  margin: auto;
+  overflow: hidden;
+}
+
+.smallimg-container {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  background-color: whitesmoke;
+  width: 100%;
+  overflow-x: auto;
+  border-radius: 8px;
+  border: 2px solid bisque;
+}
+
+.smallimg {
+  margin: 0 10px;
+  cursor: pointer;
+  border: 2px solid transparent;
+  border-radius: 8px;
+  transition: transform 0.3s ease;
+}
+
+.main-img-container {
+  position: relative;
+  height: 400px;
+  width: 100%;
+  margin-top: 20px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  border-radius: 8px;
+}
+
+.arrows {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  top: 0;
+}
+
+.arrow {
+  font-size: 24px;
+  font-style: italic;
+  cursor: pointer;
 }
